# laplace

./: .gitignore  Makefile  README.md  pyproject.toml
agent/: README.md  __init__.py  cli.py  runner.py  system_prompt.py
docs/: LIVE_RUNBOOK.md  laplace-spec.md
engine/: README.md  __init__.py  api.py  commands.py  console.py  episode.py  errors.py  live_feed.py  mcp_server.py  playout.py  report.py  stages.py  stats.py  store.py  summary.py  tools.py
eval/: baselines.py  candidates.py  diagnosis.py  gt_sweep.py  held_scenarios.py  matrix.py  metrics.py  report_table.py  run_eval.py
examples/: baseline_small.config.json  braess_patch.json  rollout_result.json
experiments/: battery_leak.py  diag_corridor.py  diag_explore.py  fidelity_metrics.py  fidelity_sweep.py  mapf_contention.py  physx_compare.py  pitch_fidelity.py  prereg_physx_breakdown_v1.json
facility/: __init__.py  build_scenario.py  demand.py  facilities.py  spec.py  usd_extractor.py
renderer/: README.md  avoidance.py  braess_n40.txt  build_stage.py  catalog.py  dump_rack_cloud.py  encode_mp4.py  export_scene.py  export_tracks.py  overlay.py  physx_probe.py  physx_run.py  physx_spike_a.py  physx_stream.py  probe_assets.py  probe_usd_layout.py  probe_usd_markers.py  render_in_env.py  render_usd.py  smoke_test.py  twin_scene.py
schemas/: README.md  config.schema.json  events.schema.md  results.schema.json  tools.md
scripts/: braess_probe.py  check_render_clear.py  check_scene.py  fleet_sweep.py  routing_robustness.py
sim/: README.md  __init__.py  config.py  engine.py  events.py  line.py  (+5 more)
(+92 files in other folders)
