[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "laplace"
version = "0.1.0"
description = "LLMs guess at dynamics. Laplace runs the experiment."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pyarrow>=14",
    "jsonschema>=4.20",
    "scipy>=1.11",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
agent = ["claude-agent-sdk>=0.2"]

[project.scripts]
laplace = "agent.cli:main"

[tool.setuptools]
packages = ["sim", "engine", "agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running tests (perf, statistical validation)",
]
